fix: should fit on mobile screen

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -29,7 +29,7 @@
     }
 
     .heya__logo__blue__round{
-        margin-top: 6.5em;
+        margin-top: 3.5em;
     }
 
     .form__group__email {
@@ -64,7 +64,7 @@
     }
 
     .google__button{
-        margin-top: 4em;
+        margin-top: 3em;
     }
 
     .big__blue__button {
